@startuml

title __HEALTHY_DIET.APP's Class Diagram__\n

  namespace com.example.healthydiet {
    class com.example.healthydiet.Adapter {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.BuildConfig {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.First2Fragment {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.Home {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.JsonParser {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.Login {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.MainActivity {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.MapsActivity {
    }
  }
  

  namespace com.example.healthydiet {
    namespace Model {
      class com.example.healthydiet.Model.Article {
      }
    }
  }
  

  namespace com.example.healthydiet {
    namespace Model {
      class com.example.healthydiet.Model.Headlines {
      }
    }
  }
  

  namespace com.example.healthydiet {
    namespace Model {
      class com.example.healthydiet.Model.News {
      }
    }
  }
  

  namespace com.example.healthydiet {
    namespace Model {
      class com.example.healthydiet.Model.Source {
      }
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.NewsDetailActivity {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.PermissionActivity {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.Register {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.Second2Fragment {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.Utils {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.apiClient {
    }
  }
  

  namespace com.example.healthydiet {
    interface com.example.healthydiet.apiInterface {
    }
  }
  

  namespace com.example.healthydiet {
    class com.example.healthydiet.healthNewsActivity {
    }
  }
  

  com.example.healthydiet.Adapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.healthydiet.Adapter o-- com.example.healthydiet.Adapter.OnItemClickListener : onItemClickListener
  com.example.healthydiet.First2Fragment -up-|> androidx.fragment.app.Fragment
  com.example.healthydiet.Home -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.healthydiet.Login -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.healthydiet.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.healthydiet.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.example.healthydiet.MapsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.healthydiet.Model.Article o-- com.example.healthydiet.Model.Source : source
  com.example.healthydiet.NewsDetailActivity .up.|> com.google.android.material.appbar.AppBarLayout.OnOffsetChangedListener
  com.example.healthydiet.NewsDetailActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.healthydiet.PermissionActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.healthydiet.Register -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.healthydiet.Second2Fragment -up-|> androidx.fragment.app.Fragment
  com.example.healthydiet.healthNewsActivity .up.|> androidx.swiperefreshlayout.widget.SwipeRefreshLayout.OnRefreshListener
  com.example.healthydiet.healthNewsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.healthydiet.healthNewsActivity o-- com.example.healthydiet.Adapter : adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
